--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ http://www.templatemo.com/tm-506-tinker
     <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="text-content">
-                <h2>Awesome <span>HTML5</span> Template <em>TINKER</em></h2>
-                <p>Phasellus aliquam finibus est, id tincidunt mauris fermentum a. In elementum diam et dui congue, ultrices bibendum mi lacinia. Aliquam lobortis dapibus nunc, nec tempus odio posuere quis. </p>
+                <h2>Just Mulch</h2>
+                <p>The top installer of mulch in Downingtown! </p>
                 <div class="primary-white-button">
-                    <a href="#" class="scroll-link" data-id="about">Let's Start</a>
+                    <a href="#" class="scroll-link" data-id="about">Click to Contact!</a>
                 </div>
             </div>
         </div>
@@ -368,8 +368,7 @@ http://www.templatemo.com/tm-506-tinker
                 <div class="col-md-4 col-sm-12">
                     <div class="logo">
                         <a href="#" class="scroll-top"><em>T</em>inker</a>
-                        <p>Copyright &copy; 2017 Your Company 
-                      | Design: <span>templatemo</span></p>
+                        <p>Copyright &copy; 2017 Just Mulch
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
