--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 Tinker Template
 http://www.templatemo.com/tm-506-tinker
 -->
-        <title>Tinker CSS Template</title>
+        <title>Just Mulch</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -384,22 +384,15 @@ http://www.templatemo.com/tm-506-tinker
                     <div class="contact-info">
                         <h4>More Info</h4>
                         <ul>
-                            <li><em>Phone</em>: 010-020-0340</li>
-                            <li><em>Email</em>: tk@company.co</li>
+                            <li><em>Phone</em>: (610) 350-1316</li>
+                            <li><em>Email</em>: greenyard@email.com</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-12">
                     <div class="connect-us">
-                        <h4>Get Social with us</h4>
-                        <ul>
-                            <li><a href="https://www.facebook.com/templatemo" target="_parent"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://www.google.com/+templatemo" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        </ul>
-                    </div>
+                        <h4>Thank you for visiting!</h4>
+                       </div>
                 </div>
             </div>
         </div>
