--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="section-heading">
                             <h4>Our Gallery</h4>
                             <div class="line-dec"></div>
-                            <p>Chia hot chicken la croix ugh dreamcatcher man bun squid vaporware kinfolk.</p>
+                            <p>Here are some pictures from previous projects. We will make your property look great!</p>
                             <div class="filter-categories">
                                 <ul class="project-filter">
                                     <li class="filter" data-filter="all"><span>Show All</span></li>
@@ -311,7 +311,7 @@ http://www.templatemo.com/tm-506-tinker
                     <div class="section-heading">
                         <h4>Contact Us</h4>
                         <div class="line-dec"></div>
-                        <p>Donec sit amet commodo arcu. Sed sit amet iaculis mi, vel fermentum nisi. Morbi dui enim, vestibulum non accumsan ac, tempor non nisl.</p>
+                        <p>Call Bryce for a FREE estimate within 24 hours of calling! We are avaliable to answer and questions or provide an estimate right now. Thank you for your business.</p>
                         <div class="pop-button">
                             <h4>Send us a message</h4>
                         </div>
@@ -367,7 +367,7 @@ http://www.templatemo.com/tm-506-tinker
             <div class="row">
                 <div class="col-md-4 col-sm-12">
                     <div class="logo">
-                        <a href="#" class="scroll-top"><em>T</em>inker</a>
+                        <a href="#" class="scroll-top"><em>Just</em>Mulch</a>
                         <p>Copyright &copy; 2017 Just Mulch
                     </div>
                 </div>
@@ -375,8 +375,8 @@ http://www.templatemo.com/tm-506-tinker
                     <div class="location">
                         <h4>Location</h4>
                         <ul>
-                            <li>30 Raffles Ave, <br>Singapore 039803</li>
-                            <li>1 Republic Blvd, <br>Singapore 038975</li>
+                            <li>Downingtown, <br>Pennsylvania 19335</li>
+                            <li>Servicing a <br>15 mile radius from Downingtown</li>
                         </ul>
                     </div>
                 </div>
