--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ http://www.templatemo.com/tm-506-tinker
                 <h2>Just Mulch</h2>
                 <p>The top installer of mulch in Downingtown! </p>
                 <div class="primary-white-button">
-                    <a href="#" class="scroll-link" data-id="about">Click to Contact!</a>
+                    <a href="#" class="scroll-link" data-id="contact-us">Click to Contact!</a>
                 </div>
             </div>
         </div>
@@ -376,7 +376,7 @@ http://www.templatemo.com/tm-506-tinker
                         <h4>Location</h4>
                         <ul>
                             <li>Downingtown, <br>Pennsylvania 19335</li>
-                            <li>Servicing a <br>15 mile radius from Downingtown</li>
+                            <li>Servicing a 15 mile<br>radius from Downingtown</li>
                         </ul>
                     </div>
                 </div>
