--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@ http://www.templatemo.com/tm-506-tinker
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#" class="scroll-top">Home</a></li>
-                        <li><a href="#" class="scroll-link" data-id="about">About Us</a></li>
-                        <li><a href="#" class="scroll-link" data-id="portfolio">Portfolio</a></li>
-                        <li><a href="#" class="scroll-link" data-id="blog">Blog</a></li>
-                        <li><a href="#" class="scroll-link" data-id="contact-us">Contact Us</a></li>
+						<li><a href="#" class="scroll-link" data-id="contact-us">Contact Us</a></li>
+                        <li><a href="#" class="scroll-link" data-id="portfolio">Gallery</a></li>
+						<li><a href="#" class="scroll-link" data-id="about">About Us</a></li>
                     </ul>
                 </div>
                 <!--/.navbar-collapse-->
@@ -80,9 +79,9 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="icon">
                             <img src="img/service_icon_01.png" alt="">
                         </div>
-                        <h4>Smart Alerts Updated</h4>
+                        <h4>Estimate</h4>
                         <div class="line-dec"></div>
-                        <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
+                        <p>Call Bryce at (610) 350-1316 to set up an appointment for an estimate.  All appointments will be given within 24 hours of the call time! Bryce will come to your house and talk with you, then we will provide you with a written estimate.</p>
                         <div class="primary-blue-button">
                             <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
                         </div>
@@ -93,9 +92,9 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="icon">
                             <img src="img/service_icon_02.png" alt="">
                         </div>
-                        <h4>Lovely HTML5 Layout</h4>
+                        <h4>Preperation</h4>
                         <div class="line-dec"></div>
-                        <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
+                        <p>Upon acceptance of the estimate, all services include the following preperation steps: edging of all beds and light weed removal. Hedge trimming and pre-emergent, or weed preventer, are optional. </p>
                         <div class="primary-blue-button">
                             <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
                         </div>
@@ -106,9 +105,9 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="icon">
                             <img src="img/service_icon_03.png" alt="">
                         </div>
-                        <h4>Always CSS Ready</h4>
+                        <h4>Installation</h4>
                         <div class="line-dec"></div>
-                        <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
+                        <p>Choose from multiple colors of the top quality mulch. All of our mulch is premium and use special dyes to hold color for longer. Installation typically takes less than one day.</p>
                         <div class="primary-blue-button">
                             <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
                         </div>
@@ -119,9 +118,9 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="icon">
                             <img src="img/service_icon_04.png" alt="">
                         </div>
-                        <h4>One-Click Install</h4>
+                        <h4>Enjoy!</h4>
                         <div class="line-dec"></div>
-                        <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
+                        <p>Enjoy the fantastic color and curb appeal from your new mulch. Your house is sure to stand out as spectacular!</p>
                         <div class="primary-blue-button">
                             <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
                         </div>
