--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ http://www.templatemo.com/tm-506-tinker
                         </div>
                         <h4>Enjoy!</h4>
                         <div class="line-dec"></div>
-                        <p>Enjoy the fantastic color and curb appeal from your new mulch. Your house is sure to stand out as spectacular!</p>
+                        <p>Enjoy the fantastic color and curb appeal from your new mulch. Your house is sure to stand out as spectouracular!</p>
                         <div class="primary-blue-button">
                             <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
                         </div>
@@ -139,15 +139,6 @@ http://www.templatemo.com/tm-506-tinker
                             <h4>Our Gallery</h4>
                             <div class="line-dec"></div>
                             <p>Here are some pictures from previous projects. We will make your property look great!</p>
-                            <div class="filter-categories">
-                                <ul class="project-filter">
-                                    <li class="filter" data-filter="all"><span>Show All</span></li>
-                                    <li class="filter" data-filter="branding"><span>Branding</span></li>
-                                    <li class="filter" data-filter="graphic"><span>Graphic</span></li>
-                                    <li class="filter" data-filter="nature"><span>Nature</span></li>
-                                    <li class="filter" data-filter="animation"><span>Animation</span></li>
-                                </ul>
-                            </div>
                         </div>
                     </div>
                     <div class="col-md-8">
