--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ http://www.templatemo.com/tm-506-tinker
                         </div>
                         <h4>Enjoy!</h4>
                         <div class="line-dec"></div>
-                        <p>Enjoy the fantastic color and curb appeal from your new mulch. Your house is sure to stand out as spectouracular!</p>
+                        <p>Enjoy the fantastic color and curb appeal from your new mulch. Your house is sure to stand out and look great!</p>
                     </div>
                 </div>
             </div>
