--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="line-dec"></div>
                         <p>Call Bryce for a FREE estimate within 24 hours of calling! We are avaliable to answer and questions or provide an estimate right now. Thank you for your business.</p>
                         <div class="pop-button">
-                            <a href="tel:6103501316">Call Bryce at (610) 350-1316</a>
+                            <a href="tel:6103501316"><h4>Call Bryce at (610) 350-1316</h4></a>
                         </div>
                     </div>
                 </div>
