--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@ http://www.templatemo.com/tm-506-tinker
     <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="text-content">
-                <h2>Just Mulch</h2>
-                <p>The top installer of mulch in Downingtown! </p>
+                <h2><bold>Just Mulch</bold></h2>
+                <p>We are the top installers of mulch in Downingtown - after all, it's all we do! Just Mulch has over five years of experience providing numerous amounts of mulch instllations and other landscaping projects. Mulch helps to make your house stand out. We are here to help you do that. We do all of the work, then you enjoy it! 
+				
+				Our estimates are completely FREE, and we will always come within 24 hours of your call! We work WITH you throughout completion. Since we just do mulch, we have become pretty good at it. Scroll down to see some pictures of our work!</p>
                 <div class="primary-white-button">
                     <a href="#" class="scroll-link" data-id="contact-us">Click to Contact!</a>
                 </div>
