--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ http://www.templatemo.com/tm-506-tinker
                         <li><a href="#" class="scroll-top">Home</a></li>
 						<li><a href="#" class="scroll-link" data-id="contact-us">Contact Us</a></li>
                         <li><a href="#" class="scroll-link" data-id="portfolio">Gallery</a></li>
-						<li><a href="#" class="scroll-link" data-id="about">About Us</a></li>
+						<li><a href="#" class="scroll-link" data-id="about">The Process</a></li>
                     </ul>
                 </div>
                 <!--/.navbar-collapse-->
@@ -84,7 +84,7 @@ http://www.templatemo.com/tm-506-tinker
                         </div>
                         <h4>Estimate</h4>
                         <div class="line-dec"></div>
-                        <p>Call Bryce at (610) 350-1316 to set up an appointment for an estimate.  All appointments will be given within 24 hours of the call time! Bryce will come to your house and talk with you, then we will provide you with a written estimate.</p>
+                        <p>Call Bryce at (610) 350-1316 to set up an appointment for an estimate.  All appointments will be given within 24 hours of the call time! Bryce will come to your house and talk with you, then we will provide you with a written estimate.<br>Our estimates are obligation-free, and we will never try to sell you additional services!</p>
                         </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
@@ -198,6 +198,9 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="pop-button">
                             <a href="tel:6103501316"><h4>Call Bryce at (610) 350-1316</h4></a>
                         </div>
+						<h4>About Us</h4>
+                        <div class="line-dec"></div>
+                        <p>We have over five years of experience with landscaping. We have completed numerous amounts of mulch installations, where we found our true passion. We excel at providing the top quality mulch installs in Downingtown, using top of the line mulch and our professional experience. Since our company only does mulch, we have become excellent. Why settle for anything less then perfect? <br><br> Bryce has started a landscaping and lawn care company before Just Mulch, but he ultimately decided that mulch is his expertise. So, he took his 5+ years of experience to start Just Mulch. He has been providing customers with the best services!</p>
                     </div>
                 </div>
             </div>
@@ -244,7 +247,11 @@ http://www.templatemo.com/tm-506-tinker
                 </div>
                 <div class="col-md-2 col-sm-12">
                     <div class="connect-us">
-                        <h4>Thank you for visiting!</h4>
+                        <h4>Hours</h4>
+						<ul>
+                            <li><em>Monday - Friday</em>: 10:00 AM to 4:00 PM</li>
+                            <li><em>Saturday - Sunday</em>: by appointment only</li>
+                        </ul>
                        </div>
                 </div>
             </div>
