--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@ http://www.templatemo.com/tm-506-tinker
                     <div class="connect-us">
                         <h4>Hours</h4>
 						<ul>
-                            <li><a>Monday - Friday</a>: 10:00 AM to 4:00 PM</li>
-                            <li><a>Saturday - Sunday</a>: by appointment only</li>
+                            <li><a>Monday - Friday: 10:00 AM to 4:00 PM</a></li>
+                            <li><a>Saturday - Sunday: by appointment only</a></li>
                         </ul>
                        </div>
                 </div>
