product type we have

--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@ http://www.templatemo.com/tm-506-tinker
                             <div class="line-dec"></div>
                             <p>Here are some pictures from previous projects. We will make your property look great!</p>
                         </div>
+						<br>,<br><br>
+						<div class="section-heading">
+                            <h4>Mulch Types</h4>
+                            <div class="line-dec"></div>
+                            <p>We can install the following products:<br>-Black, Brown, Red Mulch<br>-Wood Chips<br>-Topsoil / Fill Dirt</p>
+                        </div>
                     </div>
                     <div class="col-md-8">
                         <div class="projects-holder-3">
