new button in contact

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ http://www.templatemo.com/tm-506-tinker
                             <h4>Our Gallery</h4>
                             <div class="line-dec"></div>
                             <p>Here are some pictures from previous projects. We will make your property look great!</p>
-						<br>,<br><br>
+						<br><br><br>
                             <h4>Mulch Types</h4>
                             <div class="line-dec"></div>
                             <p>We can install the following products:<br>-Black, Brown, Red Mulch<br>-Wood Chips<br>-Topsoil / Fill Dirt</p>
@@ -201,6 +201,9 @@ http://www.templatemo.com/tm-506-tinker
                         <p>Call Bryce for a FREE estimate within 24 hours of calling! We are avaliable to answer and questions or provide an estimate right now. Thank you for your business.</p>
                         <div class="pop-button">
                             <a href="tel:6103501316"><h4>Call Bryce at (610) 350-1316</h4></a>
+                        </div>
+						<div class="pop-button">
+                            <a href="mailto:greenyard@email.com"><h4>Click to Email Bryce!</h4></a>
                         </div>
 						<br><br>
 						<h4>About Us</h4>
