--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ http://www.templatemo.com/tm-506-tinker
         <link rel="stylesheet" href="css/lightbox.css">
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+		
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
     </head>
 
 <body>
