--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ http://www.templatemo.com/tm-506-tinker
             <div class="text-content">
 				<br><br><br><br><br><br><br><br>
                 <h2><bold>Just Mulch</bold></h2>
-                <p>We are the top installers of mulch in Downingtown - after all, it's all we do! Just Mulch has over five years of experience providing numerous amounts of mulch instllations and other landscaping projects. Mulch helps to make your house stand out. We are here to help you do that. We do all of the work, then you enjoy it! 
+                <p>We are the top installers of mulch in Downingtown - after all, it's all we do! Just Mulch has over five years of experience instlling mulch as well as other landscaping projects. Just Mulch strives to help make your house stand out. We will do all of the work so you can enjoy it! 
 				<br><br><br>
-				Our estimates are completely FREE, and we will always come within 24 hours of your call! We work WITH you throughout completion. Since we just do mulch, we have become pretty good at it. Scroll down to see some pictures of our work!</p>
+				Our estimates are completely FREE, and we will always come within 24 hours of your call! We work WITH you throughout completion. Please scroll down to see some pictures of our work! We will make sure you are completely happy with our work!</p>
                 <div class="primary-white-button">
                     <a href="#" class="scroll-link" data-id="contact-us">Click to Contact!</a>
                 </div>
@@ -97,7 +97,7 @@ http://www.templatemo.com/tm-506-tinker
                         </div>
                         <h4>Preperation</h4>
                         <div class="line-dec"></div>
-                        <p>Upon acceptance of the estimate, all services include the following preperation steps: edging of all beds and light weed removal. Hedge trimming and pre-emergent, or weed preventer, are optional. </p>
+                        <p>Upon acceptance of the estimate, all services include the following preperation steps: edging of all beds and light weed removal. Hedge trimming and pre-emergent are optional. </p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
@@ -107,7 +107,7 @@ http://www.templatemo.com/tm-506-tinker
                         </div>
                         <h4>Installation</h4>
                         <div class="line-dec"></div>
-                        <p>Choose from multiple colors of the top quality mulch. All of our mulch is premium and use special dyes to hold color for longer. Installation typically takes less than one day.</p>
+                        <p>Choose from multiple colors of top quality mulch. All of our mulch is premium and use special dyes to hold color for longer. <br><br><br>Installation typically takes less than one day.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
@@ -117,7 +117,7 @@ http://www.templatemo.com/tm-506-tinker
                         </div>
                         <h4>Enjoy!</h4>
                         <div class="line-dec"></div>
-                        <p>Enjoy the fantastic color and curb appeal from your new mulch. Your house is sure to stand out and look great!</p>
+                        <p>Enjoy the fantastic color and curb appeal from your new mulch. Your house is sure to stand out and look great! Relax and enjoy!</p>
                     </div>
                 </div>
             </div>
@@ -206,12 +206,12 @@ http://www.templatemo.com/tm-506-tinker
                             <a href="tel:6103501316"><h4>Call Bryce at (610) 350-1316</h4></a>
                         </div>
 						<div class="pop-button">
-                            <a href="mailto:greenyard@email.com"><h4>Click to Email Bryce!</h4></a>
+                            <a href="mailto:justmulchpa@mail.com"><h4>Click to Email Bryce!</h4></a>
                         </div>
 						<br><br>
 						<h4>About Us</h4>
                         <div class="line-dec"></div>
-                        <p>We have over five years of experience with landscaping. We have completed numerous amounts of mulch installations, where we found our true passion. We excel at providing the top quality mulch installs in Downingtown, using top of the line mulch and our professional experience. Since our company only does mulch, we have become excellent. Why settle for anything less then perfect? <br><br> Bryce has started a landscaping and lawn care company before Just Mulch, but he ultimately decided that mulch is his expertise. So, he took his 5+ years of experience to start Just Mulch. He has been providing customers with the best services!</p>
+                        <p>We have served Downingtown with over five years of experience with landscaping, with an additional five in lawn mowing. We have completed numerous amounts of mulch installations, where we found our true passion. We excel at providing the top quality mulch installs in Downingtown, using top of the line mulch and our professional experience. Since our company only does mulch, we have become excellent at it. Why settle for anything less then perfect? <br><br> Bryce has started a landscaping and lawn care company before Just Mulch, but he ultimately decided that mulch is his expertise. So, he took his 5+ years of experience to start Just Mulch. He has been providing customers with the best services for years!</p>
                     </div>
                 </div>
             </div>
@@ -243,7 +243,7 @@ http://www.templatemo.com/tm-506-tinker
                         <h4>Location</h4>
                         <ul>
                             <li>Downingtown, <br>Pennsylvania 19335</li>
-                            <li>Servicing a 15 mile<br>radius from Downingtown</li>
+                            <li>Servicing a 30 mile<br>radius from Downingtown</li>
                         </ul>
                     </div>
                 </div>
@@ -252,7 +252,7 @@ http://www.templatemo.com/tm-506-tinker
                         <h4>More Info</h4>
                         <ul>
                             <li><em>Phone</em>: (610) 350-1316</li>
-                            <li><em>Email</em>: greenyard@email.com</li>
+                            <li><em>Email</em>: justmulchpa@mail.com</li>
                         </ul>
                     </div>
                 </div>
