--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ http://www.templatemo.com/tm-506-tinker
                         </div>
                         <h4>Installation</h4>
                         <div class="line-dec"></div>
-                        <p>Choose from multiple colors of top quality mulch. All of our mulch is premium and use special dyes to hold color for longer. <br><br><br>Installation typically takes less than one day.</p>
+                        <p>Choose from multiple colors of top quality mulch. All of our mulch is premium and use special dyes to hold color for longer. <br> Installation typically takes less than one day.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
